<resources>
    <string name="app_name">RecetteApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="UserNameTextView">User Name:</string>
    <string name="UsernameTextField">Enter Username</string>
    <string name="PasswordText">Password:</string>
    <string name="PasswordTextFiels">Enter Password</string>
    <string name="Login_text">Login</string>
    <!--    <string name="Login_button">Login</string>-->
    <string name="signupText">Sign Up!</string>
    <string name="EmailText">Email :</string>
    <!--    <string name="registerButton">Register</string>-->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello Home fragment</string>
    <string name="Login_button">Login</string>
    <string name="registerButton">Register</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="category_name"># Category Name</string>
</resources>